...
    this.title,
    this.hintText = '请输入',
    this.initialValue,
    this.maxLength,
    this.autofocus = true,
    this.validator,
    this.confirmText = '保存',
    this.cancelText = '取消',
    this.onConfirm,
    this.onCancel,
  });

  /// 显示输入对话框
...
